--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homewock 1</title>
+    <title>Homewok 1</title>
 </head>
 <body>
     <header> 
       <nav>
         <ul>
           <li>
-            <a href="index.html"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
+            <a href="../index.html"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
           </li>
           <li>
             <a href="studio.html">Studio</a>
           </li>
           <li>
-            <a href="portofolio.html">Portofolio</a>
+            <a href="../pages_html/portofolio.html" target="_self">Portofolio</a>
           </li>
           <li>
             <a href="contact.html">Contact</a>
