--- a/index.html
+++ b/index.html
@@ -87,38 +87,39 @@
       <ul>
         <li>
       <div>
-        <img src="../assets/imag4.jpg" alt=" poza Mark Guerrero" width="264" height="260">
+        <img src="../assets/photo1.jpg" alt=" poza Mark Guerrero" width="264" height="260">
         <strong>Mark Guerrero</strong>
         <p>Product Designer</p>
       </div>
         </li>
         <li>
       <div>
-        <img src="../assets/imag5.jpg" alt="poza Tom Ford" width="264" height="260">
+        <img src="../assets/photo2.jpg" alt="poza Tom Ford" width="264" height="260">
         <strong> Tom Ford</strong>
         <p>Frontend Developer</p> 
       </div>
         </li>
         <li>
       <div>
-        <img src="../assets/imag6.jpg" alt="poza Camila Garcia" width="264" height="260">
+        <img src="../assets/photo3.jpg" alt="poza Camila Garcia" width="264" height="260">
         <strong>Camila Garcia</strong>
         <p>Marketing</p> 
       </div>
         </li>
         <li>
       <div>
-        <img src="../assets/imag7.jpg" alt="poza Daniel Wilson" width="264" height="260">
+        <img src="../assets/photo4.jpg" alt="poza Daniel Wilson" width="264" height="260">
         <strong>Daniel Wilson</strong>
         <p>UI Designer</p>
       </div>
          </li>
     </div>
     </ul>
+</main> 
     <footer>
       <img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24">
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>    
-</main>     
+    
 </body>
 </html>
