--- a/index.html
+++ b/index.html
@@ -21,14 +21,10 @@
           <li>
             <a href="contact.html">Contact</a>
           </li>
-          <li>
+        </ul> 
+      </nav>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
             <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a> 
-          </li>
-        </ul>
-     </nav>
     </header> 
 <main>
     <section>
@@ -88,28 +84,28 @@
         <li>
       <div>
         <img src="../assets/photo1.jpg" alt=" poza Mark Guerrero" width="264" height="260">
-        <strong>Mark Guerrero</strong>
+        <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
       </div>
         </li>
         <li>
       <div>
         <img src="../assets/photo2.jpg" alt="poza Tom Ford" width="264" height="260">
-        <strong> Tom Ford</strong>
+        <h3> Tom Ford</h3>
         <p>Frontend Developer</p> 
       </div>
         </li>
         <li>
       <div>
         <img src="../assets/photo3.jpg" alt="poza Camila Garcia" width="264" height="260">
-        <strong>Camila Garcia</strong>
+        <h3>Camila Garcia</h3>
         <p>Marketing</p> 
       </div>
         </li>
         <li>
       <div>
         <img src="../assets/photo4.jpg" alt="poza Daniel Wilson" width="264" height="260">
-        <strong>Daniel Wilson</strong>
+        <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
       </div>
          </li>
@@ -120,6 +116,5 @@
       <img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24">
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>    
-    
 </body>
 </html>
