--- a/pages_html/portofolio.html
+++ b/pages_html/portofolio.html
@@ -22,14 +22,10 @@
             <li>
               <a href="contact.html">Contact</a>
             </li>
-            <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a> 
-            </li>
-          </ul>
+          </ul>   
         </nav>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>   
     </header>
     <main>
       <!--button section-->
@@ -44,29 +40,34 @@
       </section>
       <!--project sedtion-->
       <section>
-        <table>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+        <ul>
+          <li>
+            <ul>
+              <li><img src="../assets-portofolio/img11.jpg" alt="imag-interface-concept"><h3>Banking App Interface Concept</h3><p>App</p></li>
+              <li><img src="../assets-portofolio/img12.jpg" alt="imag-cashless payment"><h3>Cashless Payment</h3><p>Marketing</p></li>
+              <li><img src="../assets-portofolio/img13.jpg" alt="imag-meditation-app"><h3>Meditation App</h3><p>App</p></li>
+            </ul>
+          </li>
+          <li>
+            <ul>
+              <li><img src="../assets-portofolio/img21.jpg" alt="imag-taxi-service"><h3>Taxi Service</h3><p>Marketing</p></li>
+              <li><img src="../assets-portofolio/img22.jpg" alt="imag-screen-ilustrations"><h3>Screen Illustrations</h3><p>Design</p></li>
+              <li><img src="../assets-portofolio/img23.jpg" alt="imag-online-courses"><h3>Online Courses</h3><p>Marketing</p></li>
+            </ul>
+            <li>
+              <ul>
+                <li><img src="../assets-portofolio/img31.jpg" alt="imag-instagram-stories"><h3>Instagram Stories Concept</h3><p>Design</p></li>
+                <li><img src="../assets-portofolio/img32.jpg" alt="imag-organic-food"><h3>Organic Food</h3><p>Web Site</p></li>
+                <li><img src="../assets-portofolio/img33.jpg" alt="imag"><h3>Fresh Coffee</h3><p>Web Site</p></li>
+              </ul>
+            </li>
+          </li>
+        </ul>       
       </section>
     </main>
-     
-
-
-
-
+    <footer>
+      <img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24">
+      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>   
 </body>
 </html>
