Add style pages
am adaugat pagini de stil

--- a/pages_html/portofolio.html
+++ b/pages_html/portofolio.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../pages_css/styles.css">
+    <link rel="stylesheet" href="../pages_css/styleport.css">
     <title>Homewok2</title>
 </head>
 <body>
     <header> 
         <nav>
-          <ul>
+          <ul class="list-nav">
             <li>
               <a href="index.html"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
             </li>
