--- a/pages_html/portofolio.html
+++ b/pages_html/portofolio.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../pages_css/styleport.css">
     <title>Homewok2</title>
 </head>
 <body>
-    <header> 
+    <header>
+      <a href="index.html"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a> 
         <nav>
           <ul class="list-nav">
-            <li>
-              <a href="index.html"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
-            </li>
             <li>
               <a href="studio.html">Studio</a>
             </li>
@@ -24,18 +28,18 @@
             </li>
           </ul>   
         </nav>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-              <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>   
+              <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+              <a href="tel:+11(000)111-11-11" class="tel">+11(000)111-11-11</a> <hr class="hr"> 
     </header>
     <main>
       <!--button section-->
-      <section>
+      <section class="button-section">
         <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button"> Web Site</button></li> 
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button type="button" class="button all">All</button></li>
+          <li><button type="button" class="button"> Web Site</button></li> 
+          <li><button type="button" class="button">App</button></li>
+          <li><button type="button" class="button">Design</button></li>
+          <li><button type="button" class="button">Marketing</button></li>
         </ul>
       </section>
       <!--project sedtion-->
@@ -43,29 +47,29 @@
         <ul>
           <li>
             <ul>
-              <li><img src="../assets-portofolio/img11.jpg" alt="imag-interface-concept"><h3>Banking App Interface Concept</h3><p>App</p></li>
-              <li><img src="../assets-portofolio/img12.jpg" alt="imag-cashless payment"><h3>Cashless Payment</h3><p>Marketing</p></li>
-              <li><img src="../assets-portofolio/img13.jpg" alt="imag-meditation-app"><h3>Meditation App</h3><p>App</p></li>
+              <li class="list-item-img"><img src="../assets-portofolio/img11.jpg" alt="imag-interface-concept" class="img"><h3>Banking App Interface Concept</h3><p>App</p></li>
+              <li class="list-item-img"><img src="../assets-portofolio/img12.jpg" alt="imag-cashless payment" class="img"><h3>Cashless Payment</h3><p>Marketing</p></li>
+              <li class="list-item-img"><img src="../assets-portofolio/img13.jpg" alt="imag-meditation-app" class="imgs"><h3>Meditation App</h3><p>App</p></li>
             </ul>
           </li>
           <li>
             <ul>
-              <li><img src="../assets-portofolio/img21.jpg" alt="imag-taxi-service"><h3>Taxi Service</h3><p>Marketing</p></li>
-              <li><img src="../assets-portofolio/img22.jpg" alt="imag-screen-ilustrations"><h3>Screen Illustrations</h3><p>Design</p></li>
-              <li><img src="../assets-portofolio/img23.jpg" alt="imag-online-courses"><h3>Online Courses</h3><p>Marketing</p></li>
+              <li class="list-item-img"><img src="../assets-portofolio/img21.jpg" alt="imag-taxi-service" class="img"><h3>Taxi Service</h3><p>Marketing</p></li>
+              <li class="list-item-img"><img src="../assets-portofolio/img22.jpg" alt="imag-screen-ilustrations" class="img"><h3>Screen Illustrations</h3><p>Design</p></li>
+              <li class="list-item-img"><img src="../assets-portofolio/img23.jpg" alt="imag-online-courses" class="img"><h3>Online Courses</h3><p>Marketing</p></li>
             </ul>
             <li>
               <ul>
-                <li><img src="../assets-portofolio/img31.jpg" alt="imag-instagram-stories"><h3>Instagram Stories Concept</h3><p>Design</p></li>
-                <li><img src="../assets-portofolio/img32.jpg" alt="imag-organic-food"><h3>Organic Food</h3><p>Web Site</p></li>
-                <li><img src="../assets-portofolio/img33.jpg" alt="imag"><h3>Fresh Coffee</h3><p>Web Site</p></li>
+                <li class="list-item-img"><img src="../assets-portofolio/img31.jpg" alt="imag-instagram-stories" class="img"><h3>Instagram Stories Concept</h3><p>Design</p></li>
+                <li class="list-item-img"><img src="../assets-portofolio/img32.jpg" alt="imag-organic-food" class="img"><h3>Organic Food</h3><p>Web Site</p></li>
+                <li class="list-item-img"><img src="../assets-portofolio/img33.jpg" alt="imag-freshcofee" class="img"><h3>Fresh Coffee</h3><p>Web Site</p></li>
               </ul>
             </li>
           </li>
         </ul>       
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24">
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>   
