--- a/pages-html/portofolio.html
+++ b/pages-html/portofolio.html
@@ -14,17 +14,17 @@
 </head>
 <body>
     <header class="global-header">
-      <a href="index.html" target="_parent"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a> 
+      <a href="../pages-html/index.html" target="_parent"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a> 
         <nav class="nav-portofolio">
           <ul class="list-nav">
             <li>
-              <a href="studio.html" target="_self">Studio</a>
+              <a href="../pages-html/studio.html" target="_self">Studio</a>
             </li>
             <li>
-              <a href="portofolio.html" target="_self">Portofolio</a>
+              <a href="../pages-html/portofolio.html" target="_self">Portofolio</a>
             </li>
             <li>
-              <a href="contact.html" target="_self">Contact</a>
+              <a href="../pages-html/contact.html" target="_self">Contact</a>
             </li>
           </ul>   
         </nav>
@@ -34,7 +34,7 @@
     <hr>
     <main>
       <!--button section-->
-      <section class="button-section">
+      <div>
         <ul class="list-button">
           <li><button type="button" class="button all">All</button></li>
           <li><button type="button" class="button"> Web Site</button></li> 
@@ -42,10 +42,11 @@
           <li><button type="button" class="button">Design</button></li>
           <li><button type="button" class="button">Marketing</button></li>
         </ul>
-      </section>
-      <!--project sedtion-->
-      <section>
+      </div>
+      <!--project section-->
+      <div>
         <ul class="list-projects">
+
           <li>
             <ul class="list">
               <li class="list-item-img"><img src="../assets-portofolio/img11.jpg" alt="imag-interface-concept" class="img"><h3 class="header">Banking App Interface Concept</h3><p class="text-img">App</p></li>
@@ -59,22 +60,24 @@
               <li class="list-item-img"><img src="../assets-portofolio/img22.jpg" alt="imag-screen-ilustrations" class="img"><h3 class="header">Screen Illustrations</h3><p class="text-img">Design</p></li>
               <li class="list-item-img"><img src="../assets-portofolio/img23.jpg" alt="imag-online-courses" class="img"><h3 class="header">Online Courses</h3><p class="text-img">Marketing</p></li>
             </ul>
-            <li>
+          </li>
+          <li>
               <ul class="list">
                 <li class="list-item-img"><img src="../assets-portofolio/img31.jpg" alt="imag-instagram-stories" class="img"><h3 class="header">Instagram Stories Concept</h3><p class="text-img">Design</p></li>
                 <li class="list-item-img"><img src="../assets-portofolio/img32.jpg" alt="imag-organic-food" class="img"><h3 class="header">Organic Food</h3><p class="text-img">Web Site</p></li>
                 <li class="list-item-img"><img src="../assets-portofolio/img33.jpg" alt="imag-freshcofee" class="img"><h3 class="header">Fresh Coffee</h3><p class="text-img">Web Site</p></li>
               </ul>
-            </li>
           </li>
         </ul>       
-      </section>
+      </div>
     </main>
     <footer class="footer">
       <div>
       <span class="blue">WEB</span>
       <span class="cloud">STUDIO</span>
+      <div class="text-footer">
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
       </div>
     </footer>   
 </body>
