--- a/pages-html/studio.html
+++ b/pages-html/studio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Studio</title>
 </head>
 <body>
     <header> 
@@ -11,13 +11,13 @@
         <nav>
           <ul>
             <li>
-              <a href="studio.html" target="_self">Studio</a>
+              <a href="../pages-html/studio.html" target="_self">Studio</a>
             </li>
             <li>
-              <a href="../pageshtml/portofolio.html" target="_self">Portofolio</a>
+              <a href="../pages-html/portofolio.html" target="_self">Portofolio</a>
             </li>
             <li>
-              <a href="contact.html" target="_self">Contact</a>
+              <a href="../pages-html/contact.html" target="_self">Contact</a>
             </li>
           </ul> 
         </nav>
