--- a/pages-html/contact.html
+++ b/pages-html/contact.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio</title>
+    <title>Contact</title>
 </head>
 <body>
     <header> 
-        <a href="../pageshtml/index.html" target="_parent"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
+        <a href="../pages-html/index.html" target="_parent"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
         <nav>
           <ul>
             <li>
-              <a href="studio.html" target="_self">Studio</a>
+              <a href="../pages-html/studio.html" target="_self">Studio</a>
             </li>
             <li>
-              <a href="../pageshtml/portofolio.html" target="_self">Portofolio</a>
+              <a href="../pages-html/portofolio.html" target="_self">Portofolio</a>
             </li>
             <li>
-              <a href="contact.html" target="_self">Contact</a>
+              <a href="../pages-html/contact.html" target="_self">Contact</a>
             </li>
           </ul> 
         </nav>
