--- a/pages-html/index.html
+++ b/pages-html/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../pages_css/style.css">
 </head>
 <body>
     <header  class="global-header"> 
@@ -18,13 +18,13 @@
       <nav class="nav">
         <ul class="nav-list">
           <li>
-            <a href="studio.html" target="_self">Studio</a>
+            <a href="../pages-html/studio.html" target="_self">Studio</a>
           </li>
           <li>
-            <a href="../pageshtml/portofolio.html" target="_self">Portofolio</a>
+            <a href="../pages-html/portofolio.html" target="_self">Portofolio</a>
           </li>
           <li>
-            <a href="../pageshtml/contact.html" target="_self">Contact</a>
+            <a href="../page-shtml/contact.html" target="_self">Contact</a>
           </li>
         </ul> 
       </nav>
@@ -114,14 +114,17 @@
         <p>UI Designer</p>
       </div>
          </li>
+     </ul>
     </div>
-    </ul>
 </main> 
     <footer class="footer">
       <div>
         <span class="blue">WEB</span>
         <span class="cloud">STUDIO</span>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="text-footer">
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+       </div>
         </div>
     </footer>    
 </body>
