--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="pages_css/style.css">
 </head>
 <body>
     <header> 
-        <a href="../pages-html/index.html" target="_parent"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
+        <a href="../index.html" target="_parent"><img src="../assets/logo.svg" alt="logo-webstudio" width="156" height="24"></a>
         <nav>
           <ul>
             <li>
-              <a href="../pages-html/studio.html" target="_self">Studio</a>
+              <a href="../studio.html" target="_self">Studio</a>
             </li>
             <li>
-              <a href="../pages-html/portofolio.html" target="_self">Portofolio</a>
+              <a href="../portofolio.html" target="_self">Portofolio</a>
             </li>
             <li>
-              <a href="../pages-html/contact.html" target="_self">Contact</a>
+              <a href="../contact.html" target="_self">Contact</a>
             </li>
           </ul> 
         </nav>
