--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
       <nav class="nav">
         <ul class="nav-list">
           <li>
-            <a href="../pages-html/studio.html" target="_self">Studio</a>
+            <a href="../studio.html" target="_self">Studio</a>
           </li>
           <li>
-            <a href="../pages-html/portofolio.html" target="_self">Portofolio</a>
+            <a href="../portofolio.html" target="_self">Portofolio</a>
           </li>
           <li>
-            <a href="../page-shtml/contact.html" target="_self">Contact</a>
+            <a href="../contact.html" target="_self">Contact</a>
           </li>
         </ul> 
       </nav>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+            <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
+            <a href="tel:+11(000)111-11-11" class="tel">+11(000)111-11-11</a>
     </header> 
 <main>
     <section class="hero-image">
@@ -69,7 +69,7 @@
     </div> 
 <!--section images--> 
     <div>
-      <h2 class="header">What are we doing</h2>
+      <h2 class="title">What are we doing</h2>
       <ul class="list-img">
         <li>
       <img src="../assets/imag1.jpg" alt="imagine-interfata-calculator" width="360" height="300">
@@ -83,8 +83,8 @@
       </ul>
     </div>
 <!--sction our team-->    
-    <div class="our-team">
-      <h2 class="header">Our Team</h2>
+    <div class="section-our-team">
+      <h2 class="title">Our Team</h2>
       <ul class="list-photo">
         <li>
       <div class="photo">
@@ -117,8 +117,8 @@
      </ul>
     </div>
 </main> 
-    <footer class="footer">
-      <div>
+    <footer>
+      <div class="footer">
         <span class="blue">WEB</span>
         <span class="cloud">STUDIO</span>
         <div class="text-footer">
