--- a/portofolio.html
+++ b/portofolio.html
@@ -35,7 +35,7 @@
       <!--button section-->
       <div>
         <ul class="list-button">
-          <li><button type="button" class="button-first">All</button></li>
+          <li><button type="button" class="button button-first">All</button></li>
           <li><button type="button" class="button"> Web Site</button></li> 
           <li><button type="button" class="button">App</button></li>
           <li><button type="button" class="button">Design</button></li>
@@ -45,23 +45,33 @@
       <!--project section-->
       <div>
         <ul class="list-projects">
-          <li class="list-item-img"><img src="../assets/img11.jpg" alt="imag-interface-concept" class="img"><h3 class="title-img">Banking App Interface Concept</h3><p class="text-img">App</p></li>
+          <li>
+            <ul>      
+             <li class="list-item-img"><img src="../assets/img11.jpg" alt="imag-interface-concept" class="img"><h3 class="title-img">Banking App Interface Concept</h3><p class="text-img">App</p></li>
 
-          <li class="list-item-img"><img src="../assets/img12.jpg" alt="imag-cashless payment" class="img"><h3 class="title-img">Cashless Payment</h3><p class="text-img">Marketing</p></li>
+             <li class="list-item-img"><img src="../assets/img12.jpg" alt="imag-cashless payment" class="img"><h3 class="title-img">Cashless Payment</h3><p class="text-img">Marketing</p></li>
 
-          <li class="list-item-img"><img src="../assets/img13.jpg" alt="imag-meditation-app" class="imgs"><h3 class="title-img">Meditation App</h3><p class="text-img">App</p></li>
+             <li class="list-item-img"><img src="../assets/img13.jpg" alt="imag-meditation-app" class="imgs"><h3 class="title-img">Meditation App</h3><p class="text-img">App</p></li>
+            </ul>
+          </li>
+          <li>
+            <ul>
+             <li class="list-item-img"><img src="../assets/img21.jpg" alt="imag-taxi-service" class="img"><h3 class="title-img">Taxi Service</h3><p class="text-img">Marketing</p></li>
 
-          <li class="list-item-img"><img src="../assets/img21.jpg" alt="imag-taxi-service" class="img"><h3 class="title-img">Taxi Service</h3><p class="text-img">Marketing</p></li>
+             <li class="list-item-img"><img src="../assets/img22.jpg" alt="imag-screen-ilustrations" class="img"><h3 class="title-img">Screen Illustrations</h3><p class="text-img">Design</p></li>
 
-          <li class="list-item-img"><img src="../assets/img22.jpg" alt="imag-screen-ilustrations" class="img"><h3 class="title-img">Screen Illustrations</h3><p class="text-img">Design</p></li>
+             <li class="list-item-img"><img src="../assets/img23.jpg" alt="imag-online-courses" class="img"><h3 class="title-img">Online Courses</h3><p class="text-img">Marketing</p></li>
+            </ul>
+          </li>
+          <li>
+            <ul>
+             <li class="list-item-img"><img src="../assets/img31.jpg" alt="imag-instagram-stories" class="img"><h3 class="title-img">Instagram Stories Concept</h3><p class="text-img">Design</p></li>
 
-          <li class="list-item-img"><img src="../assets/img23.jpg" alt="imag-online-courses" class="img"><h3 class="title-img">Online Courses</h3><p class="text-img">Marketing</p></li>
-          
-          <li class="list-item-img"><img src="../assets/img31.jpg" alt="imag-instagram-stories" class="img"><h3 class="title-img">Instagram Stories Concept</h3><p class="text-img">Design</p></li>
+             <li class="list-item-img"><img src="../assets/img32.jpg" alt="imag-organic-food" class="img"><h3 class="title-img">Organic Food</h3><p class="text-img">Web Site</p></li>
 
-          <li class="list-item-img"><img src="../assets/img32.jpg" alt="imag-organic-food" class="img"><h3 class="title-img">Organic Food</h3><p class="text-img">Web Site</p></li>
-
-          <li class="list-item-img"><img src="../assets/img33.jpg" alt="imag-freshcofee" class="img"><h3 class="title-img">Fresh Coffee</h3><p class="text-img">Web Site</p></li>
+             <li class="list-item-img"><img src="../assets/img33.jpg" alt="imag-freshcofee" class="img"><h3 class="title-img">Fresh Coffee</h3><p class="text-img">Web Site</p></li>
+            </ul>
+          </li>
         </ul>       
       </div>
     </main>
